Created setFire function to randomly set a position in the landscape array equal to 1.

--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ548Sedh7zoS6eyy7IFBZ",
+      "authorship_tag": "ABX9TyMhirnhM6DHZ06eN6fKx80o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,18 +23,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Gregrs400/cmpsc472Project2/blob/main/cmpsc472Project2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Gregrs400/cmpsc472Project2/blob/set-fire/cmpsc472Project2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jGIpXJXzIRwV",
-        "outputId": "0eb78aa9-e84a-42a8-ebe9-6f7c19ffc44a"
+        "outputId": "bd631e14-cd7b-4489-a215-5728c2d96b0b"
       },
       "outputs": [
         {
@@ -55,18 +55,39 @@
         "#include <sys/time.h>\n",
         "#include <sys/resource.h>\n",
         "\n",
+        "\n",
+        "/*\n",
+        "  TODO:\n",
+        "  - add functionality to have this function wait an arbitrary amount of time before randomly setting another position equal to 1.\n",
+        "*/\n",
+        "void setFire(int array[20][20], int max, int min) {\n",
+        "  // Randomly select a row\n",
+        "  int row = rand() % (max - min + 1) + min;\n",
+        "  // Randomly select a column\n",
+        "  int col = rand() % (max - min + 1) + min;\n",
+        "  // Set the value at the selected row and column to 1\n",
+        "  array[row][col] = 1;\n",
+        "  printf(\"array value at position row,col: %d\", array[row][col]);\n",
+        "}\n",
+        "\n",
+        "\n",
         "int main() {\n",
+        "  // Define number of rows\n",
+        "  int rows = 20;\n",
+        "  // Define number of columns\n",
+        "  int columns = 20;\n",
         "  // Create array to represent the landscape\n",
-        "  int landscape[20][20];\n",
+        "  int landscape[rows][columns];\n",
         "  // Fill array with 0's\n",
-        "  for (int i = 0; i < 20; i++) {\n",
-        "    for (int j = 0; j < 20; j++) {\n",
+        "  for (int i = 0; i < rows; i++) {\n",
+        "    for (int j = 0; j < columns; j++) {\n",
         "      landscape[i][j] = 0;\n",
         "    }\n",
         "  }\n",
         "  printf(\"array value at position 12,15: %d\", landscape[12][15]);\n",
+        "  setFire(landscape, rows, columns);\n",
         "  return 0;\n",
-        "}"
+        "}\n"
       ]
     },
     {
@@ -81,15 +102,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GSlicNSKI0Dq",
-        "outputId": "85aa1e31-c4b0-4bbc-e1ad-0a3837cfc7fa"
+        "outputId": "100df86c-d8ed-4558-c5d7-70d7a07cbbe6"
       },
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "array value at position 12,15: 0"
+            "array value at position 12,15: 0array value at position row,col: 1"
           ]
         },
         {
@@ -98,7 +119,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 20
         }
       ]
     }
