--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhirnhM6DHZ06eN6fKx80o",
+      "authorship_tag": "ABX9TyPY3RtB/5oqc/VYRddh7sxA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 93,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jGIpXJXzIRwV",
-        "outputId": "bd631e14-cd7b-4489-a215-5728c2d96b0b"
+        "outputId": "e797c0e3-dcce-47f9-c81d-0af7e96b76a7"
       },
       "outputs": [
         {
@@ -54,20 +54,34 @@
         "#include <sys/wait.h>\n",
         "#include <sys/time.h>\n",
         "#include <sys/resource.h>\n",
-        "\n",
+        "#include <time.h>\n",
         "\n",
         "/*\n",
         "  TODO:\n",
         "  - add functionality to have this function wait an arbitrary amount of time before randomly setting another position equal to 1.\n",
         "*/\n",
-        "void setFire(int array[20][20], int max, int min) {\n",
+        "// Function to set a random position in the array to 1, which represents a wildfire.\n",
+        "void setFire(int array[20][20], int min, int max) {\n",
+        "  // Seed the random number generator\n",
+        "  srand(time(NULL));\n",
         "  // Randomly select a row\n",
         "  int row = rand() % (max - min + 1) + min;\n",
         "  // Randomly select a column\n",
         "  int col = rand() % (max - min + 1) + min;\n",
         "  // Set the value at the selected row and column to 1\n",
         "  array[row][col] = 1;\n",
-        "  printf(\"array value at position row,col: %d\", array[row][col]);\n",
+        "  printf(\"array value at position %d,%d: %d\", row, col, array[row][col]);\n",
+        "}\n",
+        "\n",
+        "// Prints out the entire landscape array.\n",
+        "void printLandscape(int array[20][20]) {\n",
+        "  for (int i = 0; i < 20; i++) {\n",
+        "    for (int j = 0; j < 20; j++) {\n",
+        "      printf(\"%d, \", array[i][j]);\n",
+        "    }\n",
+        "    // Print a newline at the end of each row.\n",
+        "    printf(\"\\n\");\n",
+        "  }\n",
         "}\n",
         "\n",
         "\n",
@@ -84,8 +98,10 @@
         "      landscape[i][j] = 0;\n",
         "    }\n",
         "  }\n",
-        "  printf(\"array value at position 12,15: %d\", landscape[12][15]);\n",
-        "  setFire(landscape, rows, columns);\n",
+        "  //printf(\"array value at position 12,15: %d\", landscape[12][15]);\n",
+        "  setFire(landscape, 0, 19);\n",
+        "  printf(\"\\n\");\n",
+        "  printLandscape(landscape);\n",
         "  return 0;\n",
         "}\n"
       ]
@@ -102,15 +118,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GSlicNSKI0Dq",
-        "outputId": "100df86c-d8ed-4558-c5d7-70d7a07cbbe6"
+        "outputId": "ee51cf8f-5168-405f-cdbf-16c76867e918"
       },
-      "execution_count": 20,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "array value at position 12,15: 0array value at position row,col: 1"
+            "array value at position 12,17: 1\n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n"
           ]
         },
         {
@@ -119,7 +155,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 98
         }
       ]
     }
