- Created Location struct to store the row and col of a fire. - Modified setFire() function to return Location struct. - Tested out setting multiple fires and displaying them in landscape array

--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPY3RtB/5oqc/VYRddh7sxA",
+      "authorship_tag": "ABX9TyNR8aalmU+yjcK2Py95vf9t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jGIpXJXzIRwV",
-        "outputId": "e797c0e3-dcce-47f9-c81d-0af7e96b76a7"
+        "outputId": "c546744d-0c64-49ba-8a9a-e363d8b406cb"
       },
       "outputs": [
         {
@@ -56,21 +56,30 @@
         "#include <sys/resource.h>\n",
         "#include <time.h>\n",
         "\n",
+        "struct Location {\n",
+        "  int row;\n",
+        "  int col;\n",
+        "};\n",
+        "\n",
         "/*\n",
         "  TODO:\n",
         "  - add functionality to have this function wait an arbitrary amount of time before randomly setting another position equal to 1.\n",
         "*/\n",
         "// Function to set a random position in the array to 1, which represents a wildfire.\n",
-        "void setFire(int array[20][20], int min, int max) {\n",
+        "struct Location setFire(int array[20][20], int min, int max) {\n",
+        "  struct Location fire;\n",
         "  // Seed the random number generator\n",
         "  srand(time(NULL));\n",
         "  // Randomly select a row\n",
-        "  int row = rand() % (max - min + 1) + min;\n",
+        "  fire.row = rand() % (max - min + 1) + min;\n",
+        "  //int row = rand() % (max - min + 1) + min;\n",
         "  // Randomly select a column\n",
-        "  int col = rand() % (max - min + 1) + min;\n",
+        "  fire.col = rand() % (max - min + 1) + min;\n",
+        "  //int col = rand() % (max - min + 1) + min;\n",
         "  // Set the value at the selected row and column to 1\n",
-        "  array[row][col] = 1;\n",
-        "  printf(\"array value at position %d,%d: %d\", row, col, array[row][col]);\n",
+        "  array[fire.row][fire.col] = 1;\n",
+        "  printf(\"array value at position %d,%d: %d\", fire.row, fire.col, array[fire.row][fire.col]);\n",
+        "  return fire;\n",
         "}\n",
         "\n",
         "// Prints out the entire landscape array.\n",
@@ -99,7 +108,13 @@
         "    }\n",
         "  }\n",
         "  //printf(\"array value at position 12,15: %d\", landscape[12][15]);\n",
-        "  setFire(landscape, 0, 19);\n",
+        "  struct Location fire1 = setFire(landscape, 0, 19);\n",
+        "  printf(\"\\n\");\n",
+        "  printLandscape(landscape);\n",
+        "\n",
+        "  sleep(1);\n",
+        "  printf(\"\\n\");\n",
+        "  struct Location fire2 = setFire(landscape, 0, 19);\n",
         "  printf(\"\\n\");\n",
         "  printLandscape(landscape);\n",
         "  return 0;\n",
@@ -118,15 +133,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GSlicNSKI0Dq",
-        "outputId": "ee51cf8f-5168-405f-cdbf-16c76867e918"
+        "outputId": "0722dcc6-e25f-4f62-bf4a-48896c64f918"
       },
-      "execution_count": 98,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "array value at position 12,17: 1\n",
+            "array value at position 5,5: 1\n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
@@ -139,7 +160,23 @@
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
-            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "\n",
+            "array value at position 10,16: 1\n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
+            "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
             "0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, \n",
@@ -155,7 +192,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 117
         }
       ]
     }
